--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.16.0",
+    "dotenv": "^8.2.0",
+    "graphql": "^15.3.0",
     "mongoose": "^5.9.25",
     "nodemon": "^2.0.4"
   }
